--- a/.github/workflows/compile_examples.yml
+++ b/.github/workflows/compile_examples.yml
@@ -19,7 +19,6 @@ jobs:
       with:
         python-version: '3.10.12'
 
-    - name: Run the compile_examples.sh script
+    - name: Preprocess files
       run: |
-        chmod +x compile_examples.sh
-        ./compile_examples.sh
+        make -C examples/
