(limited) support for functions as arguments)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,14 +1,18 @@
 # -*- Makefile -*-
 
-JASMIN       ?= jasminc
-JFLAGS       ?= -nowarning -g ${JADDFLAGS}
-PREPROCESSOR ?= ../preprocessor
+JASMIN             ?= jasminc
+JFLAGS             ?= -nowarning -g ${JADDFLAGS}
+PREPROCESSOR       ?= ../preprocessor
+PREPROCESSOR_FLAGS ?=
 
-SOURCES            := $(wildcard *.jtmpl)
-JASMIN_FILES       := $(SOURCES:.jtmpl=.jazz) memcmp_arm.jazz
-ASM_FILES          := $(JASMIN_FILES:.jazz=.s)
-EASYCRYPT_FILES    := map_add_1.ec memcmp.ec memcmp_arm.ec memcpy.ec rec_sum.ec
-TEX_FILES          := $(JASMIN_FILES:.jazz=.tex)
+EASYCRYPT ?= easycrypt
+
+SOURCES         := $(wildcard *.jtmpl)
+JASMIN_FILES    := $(SOURCES:.jtmpl=.jazz) memcmp_arm.jazz
+ASM_FILES       := $(JASMIN_FILES:.jazz=.s)
+EASYCRYPT_FILES := $(JASMIN_FILES:.jazz=.ec)
+PROOF_FILES     := $(patsubst %.ec,%_proof.ec,$(EASYCRYPT_FILES))
+TEX_FILES       := $(JASMIN_FILES:.jazz=.tex)
 
 all: $(JASMIN_FILES)
 
@@ -18,14 +22,14 @@ asm_files:       $(ASM_FILES)
 tex_files:       $(TEX_FILES)
 
 %_arm.jazz: %.jtmpl
-	$(PREPROCESSOR) -in $< -out $@ --arch="arm-m4"
+	$(PREPROCESSOR) -in $< -out $@ --arch="arm-m4" $(PREPROCESSOR_FLAGS)
 
 %_arm.s: %_arm.jazz
 	$(JASMIN) $(JFLAGS) -arch arm-m4 $< -o $@
 
 .PRECIOUS: %.jazz
 %.jazz: %.jtmpl
-	$(PREPROCESSOR) -in $< -out $@
+	$(PREPROCESSOR) -in $< -out $@ $(PREPROCESSOR_FLAGS)
 
 %.s: %.jazz
 	$(JASMIN) $(JFLAGS) $< -o $@
@@ -54,6 +58,11 @@ rec_sum.ec: rec_sum.jazz
 u32_to_u64.ec: u32_to_u64.jazz
 	$(JASMIN) -oec $@ -ec __wordsize1_to_wordsize2_3_u64_u32 $<
 
+.PHONY: check_proofs
+check_proofs: $(PROOF_FILES)
+	$(EASYCRYPT) $^
+
 .PHONY: clean
 clean:
-	rm -rf $(ASM_FILES) $(TEX_FILES) *.ec
+	rm -rf $(JASMIN_FILES) $(ASM_FILES) $(TEX_FILES)
+	find . -type f -name '*.ec' ! -name '*_proof.ec' -exec rm {} +
